tests/133_global_decl_errors.pirx
// Globals cannot be redeclared, and an initializer can only reference
// globals declared before it.
var g = 1;
var g = 2;

var early = late + 1;
var late = 2;

func main(): int {
  return 0;
}
